--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.4.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
